# zitext-editor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_EXCEPTIONS.md  LICENSE  NOTICE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  audit.yml  bench.yml  ci.yml  dependabot-auto-merge.yml  release.yml
public/: fonts.css  theme-init.js
scripts/: bump-version.mjs  check-benchmark-thresholds.mjs  check-bundle-budget.mjs  regenerate_icons.py  verify-release-version.mjs  zitext
src/: App.tsx  constants.ts  main.tsx  monaco-config.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/benches/: file_operations.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Breadcrumb.tsx  CommandPalette.tsx  DiagnosticsPanel.tsx  DialogFocusManager.tsx  EditorPanel.tsx  ErrorBoundary.tsx  ExternalChangePrompt.tsx  FileExplorer.tsx  FileTreeNode.tsx  FindInFiles.tsx  FindModal.tsx  FindReplaceBar.tsx  GoToLineModal.tsx  KeybindingEditor.tsx  MarkdownPreview.tsx  MenuBar.test.ts  MenuBar.tsx  SessionRestoreModal.tsx  SettingsModal.tsx  SplitView.tsx  StatusBar.tsx  TabBar.tsx  ToastContainer.tsx  UnsavedChangesModal.tsx  UpdateAvailableModal.tsx  WelcomeScreen.tsx  menuNavigation.ts
src/hooks/: useUpdateChecker.ts
src/services/: ErrorService.ts  monacoThemes.ts
src/state/: autosavePolicy.test.ts  autosavePolicy.ts  useAutosave.ts  useEditorState.ts  useFileManager.ts  useProjectState.ts  useSettingsManager.ts  useSplitViewManager.ts  useTabManager.test.ts  useTabManager.ts
src/styles/: ErrorBoundary.css  ToastContainer.css
src/types/: index.ts  json.ts  monaco.ts
src/utils/: contentLanguageDetection.ts  crashReporter.ts  dataTools.test.ts  (+20 more)
