[package]
name = "zitext-editor"
version = "2.1.4"
description = "A fast, lightweight, cross-platform text and code editor built with Tauri and Monaco."
authors = ["Zitrino"]
license = "Apache-2.0"
repository = "https://github.com/zitrino-oss/zitext-editor"
homepage = "https://zitext.com"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zitext_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
tempfile = "3"
sha2 = "0.10.9"
tokio = { version = "1", features = ["sync", "time"] }
url = "2"
dirs = "5"

# libc is Unix-only — keep this section at the very bottom so any future
# cross-platform deps appended to [dependencies] don't get silently scoped
# to Unix (that's exactly the bug that broke the v2.1.2 Windows build).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# std's by-handle file identity (volume serial / file index / link count) is
# still gated behind the unstable `windows_by_handle` feature, so the file
# identity checks below call the Win32 API directly instead.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "file_operations"
harness = false
